# rag-knowledge-base

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.cursor/rules/: no-em-dashes.mdc
.cursor/skills/docker-compose-app/: SKILL.md
.cursor/skills/python-project/: SKILL.md
.cursor/skills/rag-evaluation/: SKILL.md
.cursor/skills/rag-pipeline/: SKILL.md
docs/: design-and-decisions.md  rag-engineering-review.md  rag-performance-report.md
docs/screenshots/: README.md
eval/: gold.example.jsonl  gold.jsonl
scripts/: generate_insurance_policies.py
src/rag_kb/: __init__.py  __main__.py  app.py  chunking.py  cluster.py  config.py  eval_smoke.py  generate.py  ingest.py  logging_utils.py  models.py  progress.py  retrieve.py  store.py  visualize.py
tests/: test_core.py  test_integration.py
