[project]
name = "rag-kb"
version = "0.1.0"
description = "Chat With Your Docs: local RAG over PDFs with Chroma, citations, and vector-space viz"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "chromadb>=0.5.0",
  "gradio>=5.0.0",
  "langchain>=0.3.0",
  "langchain-community>=0.3.0",
  "langchain-openai>=0.2.0",
  "langchain-text-splitters>=0.3.0",
  "openai>=1.40.0",
  "pydantic-settings>=2.4.0",
  "pypdf>=5.0.0",
  "plotly>=5.24.0",
  "scikit-learn>=1.5.0",
  "hdbscan>=0.8.38",
  "numpy>=1.26.0",
  "tenacity>=8.5.0",
  "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "reportlab>=4.2.0",
]

[project.scripts]
rag-kb-ingest = "rag_kb.ingest:main"
rag-kb-chat = "rag_kb.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rag_kb"]

[tool.hatch.build.targets.wheel.sources]
"src/rag_kb" = "rag_kb"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
